@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-81
-Date: 2010-03-31
+Date: 2010-04-12
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
