@@ -1,4 +1,5 @@
 0.1-81
+- make objects remember full filename, not just local filename (issue8)
 - make read.adv.nortek() work
 - plot.tidem(): remove argument 'plot.type', using 'which' instead
 - read.pt(): add arguments from, by, and to
